--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,7 @@
 body {
-    background: rgb(15, 6, 65);
+    background: rgb(123, 116, 161);
+    height: 100vh;
+    width: 100vw;
   }
   
   .gameArea {
@@ -7,9 +9,10 @@ body {
     grid-template: auto / repeat(19, 1fr);
     grid-gap: 3px;
     background-color: #9a66a7;
-    width: 60%;
-    height: 40%;
+    width: 700px;
+    height: 500px;
     margin-left:10%;
+    top: 0px;
     border: 3px solid rgb(97, 7, 7);
   
     padding: 2rem 3rem 2rem;
@@ -20,3 +23,5 @@ body {
 #msgArea{
   color: antiquewhite;
 }
+
+
