--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@ body {
 
 .G
 {
-  background-image: url("/Image/G-Area.svg");
+  background-color:darkslategray;
   background-size: contain;
 }
 
